[package]
name = "tidy"
version = "1.0.0"
edition = "2021"
authors = ["June L. Gschwantner lucygschwantner@gmail.com"]
homepage = "https://github.com/Jackboxx/tidy"
repository = "https://github.com/jackboxx/archwiki-rs"
readme = "README.md"
keywords = ["tidy", "cleaning", "tool", "script", "cli"]
categories = ["command-line-interface"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
